# fastapi_base

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg  start.sh
.github/workflows/: linters-workflow.yml
app/: main.py
app/api/: __init__.py
app/api/endpoints/: __init__.py  router.py
app/api/endpoints/health_check/: __init__.py  models.py  urls.py
app/core/: settings.py
dev/: linters.sh  tools.sh
