[tool.poetry]
name = "fastapi-base"
version = "0.1.0"
description = ""
authors = ["Juan Pablo <jp.cano@uniandes.edu.co>"]
readme = "README.md"
packages = [{include = "fastapi_base"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
python-dotenv = "^0.21.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
mypy = "^0.971"
isort = "^5.10.1"
black = "^22.8.0"
pydocstyle = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=100
target-version=['py310']
skip-string-normalization=true
exclude='''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | env | venv | .venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''
